# gnome-font-viewer

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile.am  NEWS  autogen.sh  configure.ac  font-view.c  ftstream-vfs.c  gnome-font-viewer.doap  gnome-font-viewer.thumbnailer  meson-postinstall.sh  meson.build  meson_options.txt  org.gnome.font-viewer.json
build-aux/flatpak/: org.gnome.font-viewerDevel.json
data/: Makefile.am  gnome-font-viewer.appdata.xml.in  meson.build  org.gnome.font-viewer.appdata.xml.in  org.gnome.font-viewer.desktop.in.in  org.gnome.font-viewer.metainfo.xml.in
data/icons/: meson.build
flatpak/: org.gnome.font-viewer.json  org.gnome.font-viewerDevel.json
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  (+69 more)
src/: Makefile.am  application.css  application.rs  config.rs.in  font-inscription.c  font-inscription.h  font-model.c  font-model.h  font-preview.ui  font-thumbnailer.c  font-utils.c  font-utils.h  font-view-app-menu.ui  font-view-application.c  font-view-application.h  font-view-window.c  font-view-window.h  font-view-window.ui  font-view.c  font_preview.rs  ftstream-vfs.c  gd-main-toolbar.c  gd-main-toolbar.h  gnome-font-viewer.desktop.in.in  gnome-font-viewer.gresource.xml  gnome-font-viewer.thumbnailer  main.c  main.rs  meson.build  model.rs  open-type-layout.h  org.gnome.font-viewer.desktop.in  org.gnome.font-viewer.desktop.in.in  org.gnome.font-viewer.service.in  style.css  sushi-font-loader.c  sushi-font-widget.c  sushi-font-widget.h  totem-resources.c  utils.rs  (+1 more)
