[package]
name = "gnome-font-viewer"
version = "44.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
env_logger = "0.10.0"
font-kit = { version = "0.11.0", features = ["freetype"] }
log = "0.4.17"
once_cell = "1.16.0"
glib = "0.17.10"
glib-macros = "0.17.10"

[dependencies.ashpd]
version = "0.4.0"
features = ["gtk4"]

[dependencies.gtk]
package = "gtk4"
version = "0.6.2"
features = ["v4_10", "xml_validation"]

[dependencies.gio]
package = "gio"
version = "0.17.0"
features = ["v2_74"]

[dependencies.pango]
package = "pango"
version = "0.17.10"
features = ["v1_52"]

[dependencies.adw]
package = "libadwaita"
version = "0.4.4"
features = ["v1_4"]

[dependencies.gettext-rs]
version = "0.7.0"
features = ["gettext-system"]
